syntax = "proto3";

option go_package = "github.com/whale-team/whaleEcho/pkg/proto";
import "enum.proto";


message Command {
  CommandType type = 1;
  bytes payload = 2;
  User sender = 3;
}

message CommandResp {
  RespStatus status = 1;
  repeated string messages = 2;
  bool failed = 3;
  bool successful = 4;
}

message User {
  int64 id = 1;
  string uid = 2;
  string name = 3;
  string token = 4;
}

message Room {
  int64 id = 1;
  string uid = 2;
  string name = 3;
  string creator_id = 4;
  string creator_name = 5;
  int64 participants_limit = 6;
  int64 live_duration = 7;
}

message Message {
  int64 id = 1;
  string sender_id = 2;
  string sender_name = 3;
  string body = 4;
  MessageType type = 5;
}